@@ -55,6 +55,7 @@
 	* added more detailed instrumentation of the disk I/O thread
 
 
+	* support dht nodes in magnet links
 	* support 100 Continue HTTP responses
 	* changed default choker behavior to use 8 unchoke slots (instead of being rate based)
 	* fixed error reporting issue in disk I/O thread
